--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
             <a href="#" >Contact</a>
         </nav>
     </header>
-    <section class="home">
+    <section class="home1">
         <div class="home-img">
             <img src="main.jpg" alt="">
         </div>
